imrpove Configuration.Get<T> and remove GetAppSetting(key)

--- a/Src/Sample/Sample.CommandService/appsettings.json
+++ b/Src/Sample/Sample.CommandService/appsettings.json
@@ -2,9 +2,7 @@
   "ConnectionStrings": {
     "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;"
   },
-  "AppSettings": {
-    "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command"
-  },
+  "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command",
   "FrameworkConfiguration": {
     "handlers": [
       {
