--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -2,11 +2,9 @@
   "ConnectionStrings": {
     "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;"
   },
-  "AppSettings": {
-    "App": "CommandServiceCore", 
-    "Member:A": "ddd",
-    "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command"
-  },
+  "App": "CommandServiceCore", 
+  "Member:A": "ddd",
+  "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command",
   "urls": "http://localhost:29581/",
   "FrameworkConfiguration": {
     "handlers": [
