fix log4net configuration bug

--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -54,29 +54,14 @@
     <appender-ref ref="errorRollingFile" />
     <appender-ref ref="traceAppender" />
   </root>
-  <!--取消注释下面节, 指定name 的 debug log, 注意name是在logger.create时用的是className还是namespace.className -->
+  <!--取消注释下面节, 指定name 的 debug log, 注意name是在logger.create时用的是className还是namespace.className 
+      默认是从name的开头匹配， 即只要指定namespace即可将其下所有类的日志打印-->-->
   <!--<logger name="logger name">  
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
-  <logger name="HomeController">
+  <logger name="Sample">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>
-  <logger name="CommandProcessor">
-    <level value="DEBUG"/>
-    <appender-ref ref="debugRollingFile"/>
-  </logger>
-  <logger name="CommunityCommandHandler">
-    <level value="DEBUG"/>
-    <appender-ref ref="debugRollingFile"/>
-  </logger>
-  <logger name="CommunityRepository">
-    <level value="DEBUG"/>
-    <appender-ref ref="debugRollingFile"/>
-  </logger>
-  <logger name="WebApiApplication">
-    <level value="DEBUG" />
-    <appender-ref ref="debugRollingFile" />
   </logger>
 </log4net>
