--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;"
+    "SampleModelContext": { "ConnectionString": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;" }
   },
   "App": "CommandServiceCore", 
   "Member:A": "ddd",
