--- a/Src/Sample/Sample.CommandService/appsettings.json
+++ b/Src/Sample/Sample.CommandService/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;"
+    "SampleModelContext": { "ConnectionString": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;" }
   },
   "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command",
   "FrameworkConfiguration": {
