--- a/Src/nuget.config
+++ b/Src/nuget.config
@@ -3,5 +3,6 @@
   <packageSources>
     <add key="beta-feed" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
     <add key="aspnetcore-dev.myget" value="https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json" />
+    <add key="aspnetcore-mongodb" value="https://www.myget.org/F/efcore-mongodb/api/v3/index.json" />
   </packageSources>
 </configuration>
