--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "SampleModelContext": { "ConnectionString": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;" }
   },
+  "PathBase": "/core",
   "App": "CommandServiceCore", 
   "Member:A": "ddd",
   "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command",
