--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -31,29 +31,31 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Attributes" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.InMemory" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.InMemory" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging" version="2.1.0-preview1-final" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0-rc1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Configuration" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Options" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0-rc1-final" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
@@ -66,22 +68,25 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="ServiceBus.v1_1" version="1.0.6" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
-  <package id="System.Collections.Immutable" version="1.5.0-preview1-26216-02" targetFramework="net461" />
-  <package id="System.ComponentModel.Annotations" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.5.0-rc1" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0-rc1" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net461" />
-  <package id="System.Data.SqlClient" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.5.0-rc1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0-rc1" targetFramework="net461" />
   <package id="System.Interactive.Async" version="3.1.1" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.0-rc1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-rc1" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Xml" version="4.4.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.8.3" targetFramework="net461" />
