--- a/Src/nuget.config
+++ b/Src/nuget.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="beta-feed" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
     <add key="aspnetcore-dev.myget" value="https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json" />
     <add key="aspnetcore-mongodb" value="https://www.myget.org/F/efcore-mongodb/api/v3/index.json" />
