--- a/Src/iFramework.Plugins/EQueueNameServer/EQueueNameServer.csproj
+++ b/Src/iFramework.Plugins/EQueueNameServer/EQueueNameServer.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="ECommon.JsonNet" Version="2.5.0" />
     <PackageReference Include="ECommon.Log4Net" Version="2.5.2" />
     <PackageReference Include="EQueue" Version="2.5.5.2" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0-rc1" />
   </ItemGroup>
 
   <ItemGroup>
