--- a/Src/iFramework.Plugins/IFramework.Log4Net/IFramework.Log4Net.csproj
+++ b/Src/iFramework.Plugins/IFramework.Log4Net/IFramework.Log4Net.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.1.0-rc1-final" />
   </ItemGroup>
 
   <ItemGroup>
