--- a/Src/iFramework.Plugins/IFramework.Microsoft.DependencyInjection/IFramework.DependencyInjection.Microsoft.csproj
+++ b/Src/iFramework.Plugins/IFramework.Microsoft.DependencyInjection/IFramework.DependencyInjection.Microsoft.csproj
@@ -8,6 +8,11 @@
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\IFramework.DependencyInjection.Microsoft.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0-rc1-final" />
   </ItemGroup>
