--- a/Src/iFramework.Plugins/IFramework.JsonNetCore/IFramework.JsonNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.JsonNetCore/IFramework.JsonNet.csproj
@@ -12,7 +12,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn>1701;1702;1591</NoWarn>
-    <DocumentationFile>bin\Release\netstandard2.0\IFramework.JsonNetCore.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netstandard2.0\IFramework.JsonNet.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
