--- a/Src/iFramework.Plugins/IFramework.MessageQueueCore.ConfluentKafka/IFramework.MessageQueue.ConfluentKafka.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueueCore.ConfluentKafka/IFramework.MessageQueue.ConfluentKafka.csproj
@@ -14,7 +14,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn>1701;1702;1591</NoWarn>
-    <DocumentationFile>bin\Release\netstandard2.0\IFramework.MessageQueueCore.ConfluentKafka.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netstandard2.0\IFramework.MessageQueue.ConfluentKafka.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
