--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -64,4 +64,8 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>
+  <logger name="Microsoft.EntityFrameworkCore.Database.Command">
+    <level value="INFO"/>
+    <appender-ref ref="debugRollingFile"/>
+  </logger>
 </log4net>
