--- a/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
+++ b/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
@@ -5,6 +5,10 @@
     <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>0</WarningLevel>
+  </PropertyGroup>
+  
   <ItemGroup>
     <Compile Remove="log\**" />
     <Content Remove="log\**" />
@@ -45,8 +49,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
-    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.0.0" />
-    <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.0.0" />
+    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.0.119" />
+    <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.0.119" />
   </ItemGroup>
 
   <ItemGroup>
@@ -67,5 +71,4 @@
     <ProjectReference Include="..\Sample.Domain\Sample.Domain.csproj" />
     <ProjectReference Include="..\Sample.Persistence\Sample.Persistence.csproj" />
   </ItemGroup>
-
 </Project>
