--- a/Src/iFramework.Plugins/IFramework.MessageQueue.EQueue/IFramework.MessageQueue.EQueue.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.EQueue/IFramework.MessageQueue.EQueue.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0-prelease-0002</Version>
+    <Version>2.0.0-prelease-0003</Version>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
   </PropertyGroup>
@@ -22,6 +22,7 @@
     <PackageReference Include="ecommon.jsonnet" Version="2.5.0" />
     <PackageReference Include="ecommon.log4net" Version="2.5.2" />
     <PackageReference Include="EQueue" Version="2.5.5.2" />
+    <PackageReference Include="System.Net.NameResolution" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
