add ApiControllerBase & ApiResultWrapAttribute in IFramework.AspNet

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ obj
 /Src/iFramework.Plugins/EQueueBroker/log
 /Src/iFramework.Plugins/EQueueBroker/equeue-store1
 /Src/iFramework.Plugins/EQueue.AdminWeb/logs
+/Src/Sample/Sample.CommandServiceCore/Properties/PublishProfiles/10.100.7.46.pubxml
+/Src/ConsoleApp/Properties/PublishProfiles/linux.pubxml
