--- a/Src/iFramework.Plugins/IFramework.MessageQueueCore.InMemory/IFramework.MessageQueue.InMemory.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueueCore.InMemory/IFramework.MessageQueue.InMemory.csproj
@@ -9,6 +9,11 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\netstandard2.0\IFramework.MessageQueue.InMemory.xml</DocumentationFile>
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
