--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -38,8 +38,11 @@
       <levelToMatch value="DEBUG" />
     </filter>-->
     <threshold value="DEBUG" />
-    <layout type="log4net.Layout.PatternLayout">
+    <!--<layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
+    </layout>-->
+    <layout type="IFramework.Log4Net.LogstashLayout, IFramework.Log4Net" >
+      <app value="CommandService" />
     </layout>
   </appender>
   <appender name="traceAppender" type="log4net.Appender.TraceAppender">
