improve log state logging

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -30,8 +30,8 @@
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
-      "System": "Warning",
-      "Microsoft": "Information"
+      "System": "None",
+      "Microsoft": "None"
     },
     "Console": {
       "LogLevel": {
