--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -1,5 +1,12 @@
 ﻿<log4net>
+  <appender name="errorAsyncAppender" type="Log4Net.Async.AsyncForwardingAppender,Log4Net.Async">
+    <appender-ref ref="errorRollingFile" />
+  </appender>
+  <appender name="debugAsyncAppender" type="Log4Net.Async.AsyncForwardingAppender,Log4Net.Async">
+    <appender-ref ref="debugRollingFile" />
+  </appender>
   <appender name="errorRollingFile" type="log4net.Appender.RollingFileAppender,log4net">
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <!--日志文件名-->
     <file value="log/.error" />
     <preserveLogFileNameExtension value="true" />
@@ -14,12 +21,16 @@
     <maximumFileSize value="10MB" />
     <!--日志文件名是否为静态-->
     <staticLogFileName value="false" />
-    <layout type="log4net.Layout.PatternLayout,log4net">
+    <!--<layout type="log4net.Layout.PatternLayout,log4net">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
+    </layout>-->
+    <layout type="IFramework.Log4Net.LogstashLayout, IFramework.Log4Net" >
+      <app value="Sample" />
     </layout>
     <threshold value="ERROR" />
   </appender>
   <appender name="debugRollingFile" type="log4net.Appender.RollingFileAppender,log4net">
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <!--日志文件名-->
     <file value="log/.debug" />
     <preserveLogFileNameExtension value="true" />
@@ -34,41 +45,39 @@
     <maximumFileSize value="10MB" />
     <!--日志文件名是否为静态-->
     <staticLogFileName value="false" />
-    <!--<filter type="log4net.Filter.LevelMatchFilter">
-      <levelToMatch value="DEBUG" />
-    </filter>-->
-    <threshold value="DEBUG" />
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <param name="LevelMin" value="DEBUG"/>
+      <param name="LevelMax" value="WARN"/>
+    </filter>
     <!--<layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
     </layout>-->
     <layout type="IFramework.Log4Net.LogstashLayout, IFramework.Log4Net" >
-      <app value="CommandService" />
+      <app value="Sample" />
     </layout>
   </appender>
-  <appender name="traceAppender" type="log4net.Appender.TraceAppender">
+  <!--<appender name="traceAppender" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date %5level - %message%newline" />
     </layout>
     <threshold value="DEBUG" />
-  </appender>
+  </appender>-->
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <!--取消这里注释记录所有debug log-->
-    <appender-ref ref="errorRollingFile" />
-    <appender-ref ref="traceAppender" />
+    <appender-ref ref="errorAsyncAppender"/>
   </root>
   <!--取消注释下面节, 指定name 的 debug log, 注意name是在logger.create时用的是className还是namespace.className 
-      默认是从name的开头匹配， 即只要指定namespace即可将其下所有类的日志打印-->-->
+      默认是从name的开头匹配， 即只要指定namespace即可将其下所有类的日志打印-->
   <!--<logger name="logger name">  
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
   <logger name="Sample">
-    <level value="DEBUG"/>
-    <appender-ref ref="debugRollingFile"/>
+    <appender-ref ref="debugAsyncAppender"/>
   </logger>
-  <logger name="Microsoft.EntityFrameworkCore.Database.Command">
+  <!--<logger name="Microsoft.EntityFrameworkCore.Database.Command">
     <level value="INFO"/>
-    <appender-ref ref="debugRollingFile"/>
-  </logger>
+    <appender-ref ref="asyncAppender"/>
+  </logger>-->
 </log4net>
