add logger for rabbitmq consumer and producer

--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -75,7 +75,10 @@
   </logger>-->
   <logger name="Sample">
     <appender-ref ref="debugAsyncAppender"/>
-  </logger>
+  </logger> 
+  <!--<logger name="RabbitMQConsumer">
+    <appender-ref ref="debugAsyncAppender"/>
+  </logger>-->
   <!--<logger name="Microsoft.EntityFrameworkCore.Database.Command">
     <level value="INFO"/>
     <appender-ref ref="asyncAppender"/>
