--- a/Src/Sample/ApplicationEventSubscriber/Sample.ApplicationEventSubscriber.csproj
+++ b/Src/Sample/ApplicationEventSubscriber/Sample.ApplicationEventSubscriber.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
     <ProjectReference Include="..\Sample.ApplicationEvent\Sample.ApplicationEvent.csproj" />
     <ProjectReference Include="..\Sample.Command\Sample.Command.csproj" />
+    <ProjectReference Include="..\Sample.Domain\Sample.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
