add autofac aop implement

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SampleModelContext": { "ConnectionString": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;" }
+    "SampleModelContext":  "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;"
   },
   "PathBase": "/core",
   "App": "CommandServiceCore", 
