--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -31,17 +31,7 @@
     "LogLevel": {
       "Default": "Debug",
       "System": "None",
-      "Microsoft": "None"
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "None"
-      }
-    },
-    "Debug": {
-      "LogLevel": {
-        "Default": "None"
-      }
+      "Microsoft": "Information"
     }
   }
 }
