--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -27,7 +27,9 @@
     <layout type="IFramework.Log4Net.LogstashLayout, IFramework.Log4Net" >
       <app value="Sample" />
     </layout>
-    <threshold value="ERROR" />
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <param name="LevelMin" value="WARN"/>
+    </filter>
   </appender>
   <appender name="debugRollingFile" type="log4net.Appender.RollingFileAppender,log4net">
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
@@ -47,7 +49,7 @@
     <staticLogFileName value="false" />
     <filter type="log4net.Filter.LevelRangeFilter">
       <param name="LevelMin" value="DEBUG"/>
-      <param name="LevelMax" value="WARN"/>
+      <param name="LevelMax" value="INFO"/>
     </filter>
     <!--<layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
@@ -79,8 +81,8 @@
   <!--<logger name="RabbitMQConsumer">
     <appender-ref ref="debugAsyncAppender"/>
   </logger>-->
-  <!--<logger name="Microsoft.EntityFrameworkCore.Database.Command">
+  <logger name="Microsoft.EntityFrameworkCore.Database.Command">
     <level value="INFO"/>
-    <appender-ref ref="asyncAppender"/>
-  </logger>-->
+    <appender-ref ref="debugAsyncAppender"/>
+  </logger>
 </log4net>
