--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -81,8 +81,8 @@
   <!--<logger name="RabbitMQConsumer">
     <appender-ref ref="debugAsyncAppender"/>
   </logger>-->
-  <logger name="Microsoft.EntityFrameworkCore.Database.Command">
+  <!--<logger name="Microsoft.EntityFrameworkCore.Database.Command">
     <level value="INFO"/>
     <appender-ref ref="debugAsyncAppender"/>
-  </logger>
+  </logger>-->
 </log4net>
