--- a/Src/IFramework.Test/log4net.config
+++ b/Src/IFramework.Test/log4net.config
@@ -15,8 +15,11 @@
     <maximumFileSize value="10MB" />
     <!--日志文件名是否为静态-->
     <staticLogFileName value="false" />
-    <layout type="log4net.Layout.PatternLayout,log4net">
+    <!--<layout type="log4net.Layout.PatternLayout,log4net">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
+    </layout>-->
+    <layout type="IFramework.Log4Net.LogstashLayout, IFramework.Log4Net" >
+      <app value="Test" />
     </layout>
     <threshold value="WARN" />
   </appender>
@@ -40,10 +43,12 @@
       <param name="LevelMin" value="DEBUG"/>
       <param name="LevelMax" value="INFO"/>
     </filter>
-    <layout type="log4net.Layout.PatternLayout">
+    <!--<layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
+    </layout>-->
+    <layout type="IFramework.Log4Net.LogstashLayout, IFramework.Log4Net" >
+      <app value="Test" />
     </layout>
-   
   </appender>
   <!--<appender name="traceAppender" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
