--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "SampleModelContext":  "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;"
+    "SampleModelContext":  "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;",
+    "SampleModelContext.MySql": "server=127.0.0.1;Port=3306;uid=root;pwd=zhj777;database=SampleModelContext.Core"
   },
   "PathBase": "/core",
   "App": "CommandServiceCore", 
