--- a/Src/iFramework.Plugins/IFramework.MessageQueue.Client.Abstracts/IFramework.MessageQueue.Client.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.Client.Abstracts/IFramework.MessageQueue.Client.Abstracts.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.0.0-prelease-0004</Version>
+    <Version>2.0.0</Version>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>Supports netcore standard2.0</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
