--- a/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
@@ -3,11 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0-prelease-0016</Version>
+    <Version>2.0.0</Version>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <AssemblyName>IFramework.MessageStores.Relational</AssemblyName>
     <RootNamespace>IFramework.MessageStores.Relational</RootNamespace>
+    <Description>Supports netcore standard2.0</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
