--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -1,10 +1,11 @@
 ﻿{
   "ConnectionStrings": {
-    "SampleModelContext":  "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;",
-    "SampleModelContext.MySql": "server=127.0.0.1;Port=3306;uid=root;pwd=zhj777;database=SampleModelContext.Core"
+    "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;",
+    "SampleModelContext.MySql": "server=127.0.0.1;Port=3306;uid=root;pwd=zhj777;database=SampleModelContext.Core",
+    "SampleModelContext.MongoDb": "mongodb://10.100.7.11:27017"
   },
   "PathBase": "/core",
-  "App": "CommandServiceCore", 
+  "App": "CommandServiceCore",
   "Member:A": "ddd",
   "CommandTypeTemplate": "Sample.Command.{0}, Sample.Command",
   "urls": "http://localhost:29581/",
