--- a/Src/iFramework.Plugins/IFramework.MessageStores.MongoDb/IFramework.MessageStores.MongoDb.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores.MongoDb/IFramework.MessageStores.MongoDb.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>2.1.0-prerelease</Version>
+    <Authors>Ivan</Authors>
+    <Company>Ivan</Company>
   </PropertyGroup>
 
   <ItemGroup>
